stopgap fix for bg position

--- a/mayhem/mayhem-frontpage.css
+++ b/mayhem/mayhem-frontpage.css
@@ -142,6 +142,8 @@ div.cbTitle h1 {
 	position: absolute;
 	width: 100%;
 	background:url('https://raw.githubusercontent.com/Corgi/corgi.github.io/master/mayhem/images/5-7-19-mothersday.png') center center no-repeat;
+	background-size:contain;
+background-position:center bottom;
 }
 .time-to {
 	text-align: center;
